# book-keeping-system

./: .env  .gitignore  README.md  pyproject.toml  run.py
app/: main.py
app/database/: db.py
app/migrations/: env.py
app/migrations/versions/: 4d5ab66059f2_initial_migration.py
app/model/: __init__.py  bookModel.py  schemas.py  userModel.py
app/schema/: mutation.py  query.py  schema.py  type_defs.graphql
app/utils/: util.py
